methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:2: error: not found: value faireV
  faireV(c: Color.yellow);
  ^MethodsPicture:2: error: type yellow is not a member of object java.awt.Color
  faireV(c: Color.yellow);
                  ^MethodsPicture:2: error: not found: value c
  faireV(c: Color.yellow);
         ^MethodsPicture:3: error: not found: value faireV
  faireV(c: Color.red);
  ^MethodsPicture:3: error: type red is not a member of object java.awt.Color
  faireV(c: Color.red);
                  ^MethodsPicture:3: error: not found: value c
  faireV(c: Color.red);
         ^MethodsPicture:4: error: not found: value faireV
  faireV(c: Color.blue);
  ^MethodsPicture:4: error: type blue is not a member of object java.awt.Color
  faireV(c: Color.blue);
                  ^MethodsPicture:4: error: not found: value c
  faireV(c: Color.blue);
         ^MethodsPicture:5: error: not found: value faireV
  faireV(c: Color.green);
  ^MethodsPicture:5: error: type green is not a member of object java.awt.Color
  faireV(c: Color.green);
                  ^MethodsPicture:5: error: not found: value c
  faireV(c: Color.green);
         ^MethodsPicture:8: error: not found: value faireV
faireV(c: Color) {
^MethodsPicture:8: error: not found: value c
faireV(c: Color) {
       ^MethodsPicture:13: error: not found: value c
  setCouleurBrosse(c:Color)
                   ^